# CV_in_practice

./: .pdm-python  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  runs.csv  traffic_signs_yolo.ipynb
.github/workflows/: main.yml
app/: app.py  requirements.txt
app/flagged/: log.csv
notebooks/: traffic_signs_yolo_best_params.ipynb  traffic_signs_yolo_s.ipynb  yolo_find_params.ipynb
src/: README.md  app.py
