[project]
name = "cv"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Solomatin", email = "36135455+Samoed@users.noreply.github.com"},
]
dependencies = [
    "ultralytics>=8.0.214",
    "gradio>=4.4.1",
    "pandas>=2.1.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
lint = [
    "ruff>=0.1.5",
    "mypy>=1.7.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
extend-select= [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff
]
fix = true
target-version = "py310"
line-length = 120

[tool.ruff.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_redundant_casts = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "scipy",
    "sklearn",
]
ignore_missing_imports = true
